--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "latest",
